--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -40,6 +40,7 @@
     "fortmatic": "^2.2.1",
     "graphiql": "^1.0.5",
     "graphql": "^15.3.0",
+    "humanize-duration": "^3.25.1",
     "isomorphic-fetch": "^3.0.0",
     "node-watch": "^0.7.1",
     "postcss": "^8.2.6",
@@ -48,7 +49,6 @@
     "react-blockies": "^1.4.1",
     "react-css-theme-switcher": "^0.2.2",
     "react-dom": "^17.0.2",
-    "react-json-view": "^1.21.1",
     "react-qr-reader": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
